--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     <link rel="stylesheet" href="https://use.typekit.net/fdg2lzh.css">
   </head>
   <body>
+    <i id="spacer"></i>
     <h1>JavaScript.<br>That can <i>learn</i>.<br>JavaScript<br>But better.</h1>
     <hr><!--underused element, creates horizontal rule-->
     <p onclick="window.location.href = '/adapt.js'" ondblclick="window.location.href='https://github.com/kaiete/AdaptiveJS/edit/main/adapt.js'">Get it now</p>
     <!--why is there a dblclick attribute? it is there for devs to easily go to editing on github straight from the homepage.-->
     <style>
+      #spacer {
+        padding-top: 30px;
+      }
       body {
         font-family: lato;
         text-align: center;
         font-weight: 500;
+        background-image: url("/download (2).jpeg");
+        background-size: 100%;
+        background-repeat: no-repeat;
       }
     </style>
   </body>
