--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>JavaScript.<br>That can <i>learn</i>.<br>JavaScript<br>But better.</h1>
     <hr><!--underused element, creates horizontal rule-->
     <p onclick="window.location.href = '/adapt.js'" ondblclick="window.location.href='https://github.com/kaiete/AdaptiveJS/edit/main/adapt.js'">Get it now</p>
+    <p ondblclick="window.location.href = 'https://github.com/kaiete/AdaptiveJS/edit/main/index.html'"></p>
     <!--why is there a dblclick attribute? it is there for devs to easily go to editing on github straight from the homepage.-->
     <style>
       #spacer {
