--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <i id="spacer"></i>
-    <h1>JavaScript.<br>That can <i>learn</i>.<br>JavaScript<br>But better.</h1>
+    <h1>JavaScript<br>That can <i>learn</i>.<br>JavaScript<br>But better.</h1>
     <hr><!--underused element, creates horizontal rule-->
     <p onclick="window.location.href = '/adapt.js'" ondblclick="window.location.href='https://github.com/kaiete/AdaptiveJS/edit/main/adapt.js'">Get it now</p>
     <p ondblclick="window.location.href = 'https://github.com/kaiete/AdaptiveJS/edit/main/index.html'"></p>
