--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         background-image: url("/download (2).jpeg");
         background-size: 100%;
         background-repeat: no-repeat;
+        color: white;
       }
     </style>
   </body>
